[package]
name = "lvqr-transcode"
description = "Server-side transcoding for LVQR (Tier 4 item 4.6)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["lvqr", "streaming", "transcode", "abr"]
categories = ["multimedia"]

[dependencies]
dashmap = { workspace = true }
lvqr-fragment = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
