[package]
name = "lvqr-wasm"
description = "LVQR WebAssembly bindings for browser playback"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["streaming", "wasm", "webrtc", "webtransport"]
categories = ["multimedia", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "MessageEvent",
    "WebSocket",
    "BinaryType",
    "CloseEvent",
    "ErrorEvent",
] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
