[package]
name = "lvqr-wasm"
description = "DEPRECATED: prefer @lvqr/core (npm). LVQR WebAssembly bindings stub for browser playback"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["streaming", "wasm", "webtransport", "moq"]
categories = ["multimedia", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "MessageEvent",
    "WebSocket",
    "BinaryType",
    "CloseEvent",
    "ErrorEvent",
    "WebTransport",
    "WebTransportOptions",
    "WebTransportHash",
    "WebTransportBidirectionalStream",
    "WebTransportCloseInfo",
    "WebTransportSendStream",
    "WebTransportReceiveStream",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "WritableStream",
    "WritableStreamDefaultWriter",
] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
